--- a/sass/blocks/_package.sass
+++ b/sass/blocks/_package.sass
@@ -72,6 +72,7 @@
       left: 0
       top: 26px
       border-radius: 0px 4px 4px 0px
+      z-index: 10
       &--narrow
         min-width: 60px
         font-style: normal
